add district field in assignment (#1642)
* add district field in assignment

* schema and data update for court establishment