@@ -1,5 +1,7 @@
 package org.egov.hrms.web.validator;
 
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.time.ZoneId;
@@ -161,6 +163,9 @@ public class EmployeeValidator {
 		validateDataUniqueness(employees,errorMap);
         validateUserMobile(employees,errorMap,request.getRequestInfo());
         validateUserName(employees,errorMap,request.getRequestInfo());
+		if(request.getEmployees().get(0).getEmployeeType().equals(HRMSConstants.HRMS_EMPLOYEE_JUDGE)){
+			validateJudgeAssignment(request, errorMap);
+		}
 	}
 
 	/**
@@ -186,6 +191,31 @@ public class EmployeeValidator {
 		});
 	}
 
+	private void validateJudgeAssignment(EmployeeRequest request, Map<String, String> errorMap) {
+		for(Employee employee : request.getEmployees()) {
+			EmployeeSearchCriteria criteria = EmployeeSearchCriteria.builder()
+					.tenantId(request.getEmployees().get(0).getTenantId())
+					.courtrooms(employee.getAssignments()
+							.stream()
+							.map(Assignment::getCourtroom)
+							.collect(Collectors.toList()))
+					.employeetypes(List.of(employee.getEmployeeType()))
+					.asOnDate(LocalDateTime.now().toInstant(ZoneOffset.UTC).toEpochMilli())
+					.designations(employee.getAssignments()
+							.stream()
+							.map(Assignment::getDesignation)
+							.collect(Collectors.toList()))
+					.courtEstablishment(employee.getAssignments()
+							.stream()
+							.map(Assignment::getCourtEstablishment)
+							.collect(Collectors.toList()))
+					.build();
+			List<Employee> employees = employeeService.search(criteria, request.getRequestInfo()).getEmployees();
+			if (!employees.isEmpty()) {
+				errorMap.put(ErrorConstants.HRMS_INVALID_ASSIGNMENT, ErrorConstants.ERR_HRMS_INVALID_ASSIGNMENT);
+			}
+		}
+	}
 	/**
 	 * Checks if the mobile number used in the request is duplicate.
 	 * 
@@ -346,10 +376,12 @@ public class EmployeeValidator {
 	 * @param mdmsData
 	 */
 	private void validateAssignments(Employee employee, Map<String, String> errorMap, Map<String, List<String>> mdmsData) {
-		List<Assignment> currentAssignments = employee.getAssignments().stream().filter(assignment -> assignment.getIsCurrentAssignment()).collect(Collectors.toList());
-		if(currentAssignments.size() != 1){
-			errorMap.put(ErrorConstants.HRMS_INVALID_CURRENT_ASSGN_CODE, ErrorConstants.HRMS_INVALID_CURRENT_ASSGN_MSG);
-		}
+		List<Assignment> currentAssignments = employee.getAssignments().stream()
+				.peek(assignment -> {
+                    assignment.setIsCurrentAssignment((assignment.getToDate()) == null ||
+                            (assignment.getToDate() >= (Long)LocalDateTime.now().toInstant(ZoneOffset.UTC).toEpochMilli()));
+                })
+				.filter(Assignment::getIsCurrentAssignment).toList();
 		employee.getAssignments().sort(new Comparator<Assignment>() {
 			@Override
 			public int compare(Assignment assignment1, Assignment assignment2) {
@@ -385,7 +417,8 @@ public class EmployeeValidator {
                 	errorMap.put(ErrorConstants.HRMS_INVALID_ASSIGNMENT_DATES_CODE, ErrorConstants.HRMS_INVALID_ASSIGNMENT_DATES_MSG);
 			if(null != employee.getDateOfAppointment() && assignment.getFromDate() <	 employee.getDateOfAppointment())
 				errorMap.put(ErrorConstants.HRMS_INVALID_ASSIGNMENT_DATES_APPOINTMENT_CODE, ErrorConstants.HRMS_INVALID_ASSIGNMENT_DATES_APPOINTMENT_MSG);
-
+			if(!mdmsData.get(HRMSConstants.HRMS_MDMS_DISTRICT_CODE).contains(assignment.getDistrict()))
+				errorMap.put(ErrorConstants.HRMS_INVALID_DISTRICT_CODE, ErrorConstants.HRMS_INVALID_DISTRICT_CODE_MSG);
         }
 		
 	}
